# apps-generator

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  devto-post.md  pyproject.toml
.claude/skills/: create-app.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: api-client-and-types.md  architecture.md  deployment.md  getting-started.md  multi-tenancy.md  observability.md  resources-and-crud.md  security.md  testing.md
src/apps_generator/: __init__.py  __main__.py
src/apps_generator/cli/: docker_compose.py  generate.py  main.py  repo.py  resources.py  sync.py  templates_cmd.py
src/apps_generator/config/: settings.py
src/apps_generator/core/: engine.py  generator.py  manifest.py  parameters.py
src/apps_generator/models/: context.py  repository.py  template.py
src/apps_generator/templates/: packaging.py  registry.py  repository.py
tests/: conftest.py  test_array_field_types.py  test_e2e_generation.py  test_engine.py  test_error_boundary_and_toast.py  test_gateway_and_linking.py  test_generate_integration.py  test_naming.py  test_page_type_registry.py  test_page_types_calendar.py  test_page_types_detail.py  test_page_types_edit.py  test_page_types_grid.py  test_page_types_kanban.py  test_page_types_settings.py  test_page_types_tree.py  test_reference_field_type.py  test_resources.py  test_row_click_to_detail.py  test_translations.py  test_types_and_pages.py  test_ui_kit.py
(+291 files in other folders)
